--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
         <div class="movie-list">
             
             <div class="movie-card">
-                <img src="https://via.placeholder.com/350x200?text=Tên+Phim+1" alt="Tên Phim 1">
-                <div class="movie-info">
-                    <h3>Phim Hành Động Tuyệt Vời</h3>
-                    <p>Mô tả ngắn: Một bộ phim đầy kịch tính với những pha hành động mãn nhãn.</p>
-                    <a href="#video-player-1" class="watch-btn" onclick="showVideo('https://drive.google.com/file/d/1Vl_iTrtB8SBspO-tgOjMxJjrFmUdvFXg/view?usp=drive_link', 'Phim Hành Động Tuyệt Vời')">Xem Ngay</a>
-                </div>
-            </div>
+				<img src="https://via.placeholder.com/350x200?text=Tên+Phim+1" alt="Tên Phim 1">
+				<div class="movie-info">
+					<h3>Phim Hành Động Tuyệt Vời</h3>
+					<p>Mô tả ngắn: Một bộ phim đầy kịch tính với những pha hành động mãn nhãn.</p>
+					<a href="#video-player-1" class="watch-btn" onclick="showVideo('1Vl_iTrtB8SBspO-tgOjMxJjrFmUdvFXg', 'Phim Hành Động Tuyệt Vời')">Xem Ngay</a>
+				</div>
+			</div>
 
             <div class="movie-card">
                 <img src="https://via.placeholder.com/350x200?text=Tên+Phim+2" alt="Tên Phim 2">
